# int20h-2025-xdboobs

./: README.md  docker-compose.yml
inference_api/: Dockerfile  main.py  pyproject.toml  requirements.txt
inference_api/models/: requests.py
inference_api/utils/: __init__.py  utils.py
mlflow/: Dockerfile
pipelines/: Dockerfile  pyproject.toml  register_pipelines.py  requirements.txt
pipelines/notebooks/: full_pipeline.ipynb  model_dev.ipynb
pipelines/prefect_pipelines/: inference.py  tasks.py  training.py
pipelines/prefect_tasks/: data_processing.py
ui/: Dockerfile  pyproject.toml
