[project]
name = "pipelines"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.37.2",
    "mlflow>=2.20.3",
    "notebook>=7.3.2",
    "omegaconf>=2.3.0",
    "optuna>=4.2.1",
    "pandas>=2.2.3",
    "prefect>=3.2.7",
    "tqdm>=4.67.1",
    "xgboost>=2.1.4",
]
